# AchieverBot

./: .env.dist  Dockerfile  bot.py  docker-compose.yml  pyproject.toml
infrastructure/database/models/: accruals.py  awards.py  buffer.py  executes.py  users.py
infrastructure/database/repo/: accruals.py  awards.py  buffer.py  executes.py  procedures.py  requests.py  users.py
infrastructure/migrations/: env.py
infrastructure/migrations/versions/: 001_create_accruals.py  002_create_awards.py
tgbot/: config.py
tgbot/filters/: admin.py
tgbot/handlers/: __init__.py
tgbot/handlers/admin/: main.py  search.py
tgbot/handlers/user/: achievements.py  awards.py  main.py
tgbot/keyboards/user/: achievements.py  awards.py
tgbot/middlewares/: database.py
tgbot/misc/: states.py
tgbot/services/: mailing.py
