[project]
name = "achieverbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.21.0",
    "aioodbc>=0.5.0",
    "alembic>=1.16.4",
    "betterlogging>=1.0.0",
    "environs>=14.2.0",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
]
